@@ -1,11 +1,11 @@
 {
-  "count": 242,
+  "count": 241,
   "uniques": 145,
   "clones": [
     {
       "timestamp": "2024-02-13T00:00:00Z",
-      "count": 55,
-      "uniques": 36
+      "count": 53,
+      "uniques": 35
     },
     {
       "timestamp": "2024-02-14T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2024-02-26T00:00:00Z",
       "count": 12,
       "uniques": 11
+    },
+    {
+      "timestamp": "2024-02-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
